refactor(service,kubernetes): ♻️ 替换Collectors.toList()为Java 16的toList()
将Stream的collect(Collectors.toList())简化为Java 16引入的toList()方法，提升代码简洁性